# rss-to-epub

./: LICENSE  README.md  flake.nix  pyproject.toml
rss_to_epub/: cli.py  epub.py  feed.py
